# Explorer

./: Cargo.toml  README.md  explorer.desktop
backends/explorer-archive-zip/: Cargo.toml
backends/explorer-archive-zip/src/: archive.rs  fsbackend.rs  lib.rs  path.rs  session.rs
backends/explorer-archive-zip/src/backend/: archive.rs  bootstrap.rs  fsbackend.rs  identity.rs  io.rs  metadata.rs  mod.rs  navigation.rs
backends/explorer-fs-local/: Cargo.toml
backends/explorer-fs-local/src/: directory.rs  fsbackend.rs  lib.rs
backends/explorer-fs-local/src/backend/: archive.rs  bootstrap.rs  fsbackend.rs  identity.rs  io.rs  metadata.rs  mod.rs  navigation.rs
explorer-core/: Cargo.toml
explorer-core/src/: browse_path.rs  entry.rs  fs.rs  lib.rs  model.rs  navigation.rs  preview.rs  text_encoding.rs  tree.rs
explorer-core/src/archive/: mod.rs
explorer-core/src/filesystem/: mod.rs
explorer-core/src/filesystem/backends/: archive.rs  backend.rs  bootstrap.rs  fs.rs  identity.rs  io.rs  kinds.rs  metadata.rs  mod.rs  mount.rs  navigation.rs
explorer-core/src/filesystem/path/: access.rs  address.rs  builders.rs  epath.rs  mod.rs  mounter.rs  nodes.rs  ops.rs  reader.rs  util.rs
explorer-core/src/i18n/: bundle.rs  detect.rs  ids.rs  mod.rs
explorer-core/src/preview/: image_preview.rs  mod.rs  pdf_preview.rs  ppt_preview.rs  text_preview.rs  word_preview.rs
explorer-ui/: Cargo.toml
explorer-ui/src/: crumbs.rs  entry.rs  entry_ext.rs  lib.rs  model.rs  navigation.rs  tree.rs
explorer-ui/src/i18n/: bundle.rs  ids.rs
explorer-ui/src/preview/: image_preview.rs  io.rs  mod.rs  pdf_preview.rs  ppt_preview.rs  text_preview.rs  word_preview.rs
locales/: en.ftl  zh-Hans.ftl
resources/: install-icon.sh  uninstall-icon.sh
src/: app.rs  fluent.rs  main.rs  theme.rs  window_icon.rs
src/app/: mod.rs  update.rs
src/message/: explorer.rs  file_list.rs  input.rs  locale.rs  mod.rs  preview.rs  settings.rs  theme.rs  tree.rs  window.rs
src/view/: mod.rs
src/widget/: directory_tree.rs  file_list.rs  lucide_icon.rs  mod.rs  modal.rs  settings_dialog.rs  status_bar.rs  style.rs  toolbar.rs  toolbar_icons.rs  tree_icons.rs  wheel_blocker.rs
src/widget/file_list/: cell.rs  columns.rs  header.rs  message.rs  mod.rs  resize.rs  row.rs  sort.rs  task.rs
src/widget/preview_dialog/: document.rs  image.rs  mod.rs  text.rs
