[workspace]
members = [
    "explorer-core",
    "explorer-ui",
    "backends/explorer-fs-local",
    "backends/explorer-archive-zip",
]
resolver = "2"

[package]
name = "explorer"
version = "0.1.0"
edition = "2021"
description = "A Windows Explorer-like file manager built with Iced"

[dependencies]
explorer-core = { path = "explorer-core" }
explorer-ui = { path = "explorer-ui" }
explorer-fs-local = { path = "backends/explorer-fs-local" }
explorer-archive-zip = { path = "backends/explorer-archive-zip" }
fluent = "0.17"
iced = { version = "0.14", features = ["tokio", "advanced", "image"] }
lucide-icons = { version = "1.20", features = ["iced"] }
fontdue = "0.9"
